# better-tokio-select

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: tokio_select.rs
tests/ui/: extra_token_in_args.stderr  invalid_arg.stderr  missing_poll.stderr  or_3.rs  or_3.stderr
