[package]
name = "better_tokio_select"
description = "tokio::select! that can be formatted by rustfmt"
version = "0.1.6"
authors = ["Nik Revenco <pm@nikrev.com>"]
edition = "2021"
repository = "https://github.com/nik-rev/better-tokio-select"
license = "MIT OR Apache-2.0"
keywords = ["tokio", "io", "async", "non-blocking", "select"]
categories = ["development-tools", "asynchronous", "network-programming", "no-std", "rust-patterns"]

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["full", "extra-traits"] }

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1.50.0", features = ["full"] }
tokio-test = "0.4.3"
trybuild = "1.0.90"

[package.metadata.docs.rs]
all-features = true

[package.metadata.release]
pre-release-hook = ["cargo", "+nightly", "reedme"]
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "^\\[Unreleased\\]", replace = "[v{{version}}]", exactly = 1 },
  { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
  { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = """
## [Unreleased]

[Unreleased]: {{repository}}/compare/{{tag_name}}...HEAD

## [v{{version}}] - {{date}}""", exactly = 1 },
]

[lib]
proc-macro = true
